<resources>
    <string name="app_name">AndroidMVVM</string>
    <string name="post">Post #: %1$d</string>
    <string name="post_id">Post #: 10</string>
    <string name="post_title">Lorem Ipsum Dolor</string>
    <string name="post_body">This is the post body.. it may be quite long but we\'re truncate it after a few lines</string>
    <string name="nav_posts">Posts</string>
    <string name="nav_albums">Albums</string>
    <string name="nav_todos">Todos</string>
    <string name="post_details">Post Details</string>
    <string name="album_photos">Photos</string>
    <string name="label_name">Name</string>
    <string name="label_user_name">Username</string>
    <string name="label_email">Email</string>
    <string name="label_website">Website</string>
    <string name="label_comments">Comments</string>
    <string name="photo_desc">Photo</string>
    <string name="by">by: %1$s</string>
</resources>