<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_dashboard"
    app:startDestination="@id/postFragment">

    <fragment
        android:id="@+id/postFragment"
        android:name="com.jrektabasa.androidmvvm.view.screen.fragment.PostFragment"
        android:label="@string/nav_posts"
        tools:layout="@layout/fragment_post">
        <action
            android:id="@+id/action_postFragment_to_postDetailFragment"
            app:destination="@id/postDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.jrektabasa.androidmvvm.view.screen.fragment.AlbumFragment"
        android:label="@string/nav_albums"
        tools:layout="@layout/fragment_album" />
    <fragment
        android:id="@+id/todoFragment"
        android:name="com.jrektabasa.androidmvvm.view.screen.fragment.TodoFragment"
        android:label="@string/nav_todos"
        tools:layout="@layout/fragment_todo" />
    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.jrektabasa.androidmvvm.view.screen.fragment.PostDetailFragment"
        android:label="@string/post_details"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="postId"
            android:defaultValue="1"
            app:argType="integer" />
    </fragment>
</navigation>